--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -6,51 +6,52 @@
   padding: 3% 5%;
   background-image: url('../../assets/pizza-background.jpg');
   background-size: cover;
-}
 
-.link {
-  width: 360px;
-  padding: 2px;
-  border-radius: 10px;
-  background-color: white;
-}
+  .link {
+    width: 360px;
+    padding: 2px;
+    margin-bottom: 2%;
+    border-radius: 10px;
+    background-color: white;
+  }
 
-.main {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  margin-top: 2%;
-}
-
-.main > * {
-  width: 45%;
-}
-
-.pricing {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-@media only screen and (max-width: 768px) {
   .main {
-    flex-direction: column-reverse;
-  }
-
-  .main > * {
     width: 100%;
-    margin-top: 10%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2%;
+
+    > * {
+      width: 45%;
+    }
+
+    .pricing {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    .title-container {
+      display: flex;
+      height: 50px;
+      justify-content: center;
+      align-items: center;
+
+      .title {
+        padding: 1%;
+        border-radius: 5px;
+      }
+    }
   }
-}
 
-.title-container {
-  display: flex;
-  height: 50px;
-  justify-content: center;
-  align-items: center;
+  @media only screen and (max-width: 768px) {
+    .main {
+      flex-direction: column-reverse;
 
-  .title {
-    padding: 1%;
-    border-radius: 5px;
+       > * {
+        width: 100%;
+        margin-top: 10%;
+      }
+    }
   }
 }
