--- a/client/src/components/home/order/Order.scss
+++ b/client/src/components/home/order/Order.scss
@@ -1,12 +1,14 @@
-.order-title {
-  text-align: center;
-}
+.order {
+  .order-title {
+    text-align: center;
+  }
 
-.order-content {
-  text-align: center;
-}
+  .order-content {
+    text-align: center;
+  }
 
-.order-button-container {
-  display: flex;
-  justify-content: flex-end;
+  .order-button-container {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
