--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -45,6 +45,10 @@
   }
 
   @media only screen and (max-width: 768px) {
+    .link {
+      margin-bottom: 10%;
+    }
+
     .main {
       flex-direction: column-reverse;
 
