--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -1,6 +1,7 @@
 @import 'order/Order';
 @import 'pizzas/Pizza';
 @import 'pizzas/Ingredients';
+@import 'Confirmation';
 
 .app {
   padding: 3% 5%;
